FIX: fixed overFlow for apartments page

--- a/movein-server/movein-client/src/pages/Apartment.module.css
+++ b/movein-server/movein-client/src/pages/Apartment.module.css
@@ -47,6 +47,6 @@
 }
 
 .apartmentsDiv {
-  overflow-y: hidden;
-  max-height: 40rem;
+  overflow-y: scroll;
+  max-height: 75vh;
 }
